src/seqvars/ingest/snapshots/varfish_server_worker__seqvars__ingest__test__result_snapshot_test@clair3_glnexus_vcf.snap
---
source: src/seqvars/ingest/mod.rs
expression: "std::fs::read_to_string(&args.path_out)?"
---
##fileformat=VCFv4.4
##INFO=<ID=gnomad_exomes_an,Number=1,Type=Integer,Description="Number of alleles in gnomAD exomes">
##INFO=<ID=gnomad_exomes_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in gnomAD exomes">
##INFO=<ID=gnomad_exomes_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in gnomAD exomes">
##INFO=<ID=gnomad_exomes_hemi,Number=1,Type=Integer,Description="Number of hemi. alt. carriers in gnomAD exomes">
##INFO=<ID=gnomad_genomes_an,Number=1,Type=Integer,Description="Number of alleles in gnomAD genomes">
##INFO=<ID=gnomad_genomes_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in gnomAD genomes">
##INFO=<ID=gnomad_genomes_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in gnomAD genomes">
##INFO=<ID=gnomad_genomes_hemi,Number=1,Type=Integer,Description="Number of hemi. alt. carriers in gnomAD genomes">
##INFO=<ID=gnomad_mtdna_an,Number=1,Type=Integer,Description="Number of alleles in gnomAD MT">
##INFO=<ID=gnomad_mtdna_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in gnomAD MT">
##INFO=<ID=gnomad_mtdna_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in gnomAD MT">
##INFO=<ID=gnomad_mtdna_hemi,Number=1,Type=Integer,Description="Number of hemi. alt. carriers in gnomAD MT">
##INFO=<ID=helix_an,Number=1,Type=Integer,Description="Number of alleles in HelixMtDb">
##INFO=<ID=helix_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in HelixMtDb">
##INFO=<ID=helix_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in HelixMtDb">
##INFO=<ID=ANN,Number=.,Type=String,Description="Functional annotations: 'Allele | Annotation | Annotation_Impact | Gene_Name | Gene_ID | Feature_Type | Feature_ID | Transcript_BioType | Rank | HGVS.c | HGVS.p | cDNA.pos / cDNA.length | CDS.pos / CDS.length | AA.pos / AA.length | Distance | Strand | ERRORS / WARNINGS / INFO'">
##FILTER=<ID=PASS,Description="All filters passed">
##FORMAT=<ID=AD,Number=R,Type=Integer,Description="Read depth for each allele">
##FORMAT=<ID=DP,Number=1,Type=Integer,Description="Read depth">
##FORMAT=<ID=GQ,Number=1,Type=Integer,Description="Conditional genotype quality">
##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
##FORMAT=<ID=PS,Number=1,Type=Integer,Description="Phase set">
##contig=<ID=1,length=249250621,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=2,length=243199373,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=3,length=198022430,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=4,length=191154276,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=5,length=180915260,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=6,length=171115067,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=7,length=159138663,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=8,length=146364022,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=9,length=141213431,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=10,length=135534747,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=11,length=135006516,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=12,length=133851895,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=13,length=115169878,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=14,length=107349540,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=15,length=102531392,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=16,length=90354753,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=17,length=81195210,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=18,length=78077248,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=19,length=59128983,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=20,length=63025520,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=21,length=48129895,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=22,length=51304566,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=X,length=155270560,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=Y,length=59373566,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=MT,length=16569,assembly="GRCh37",species="Homo sapiens">
##fileDate=20230421
##SAMPLE=<ID=SAMPLE1,Sex="Male",Disease="Affected">
##SAMPLE=<ID=SAMPLE2,Sex="Female",Disease="Affected">
##PEDIGREE=<ID=SAMPLE1>
##PEDIGREE=<ID=SAMPLE2>
##x-varfish-case-uuid=00000000-0000-0000-0000-000000000000
##x-varfish-version=<ID=varfish-server-worker,Version="x.y.z">
##x-varfish-version=<ID=orig-caller,Name="Glnexus",Version="v1.4.1-0-g68e25e5",ConfigName="/tmp/clair3.yml">
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	SAMPLE1	SAMPLE2
1	10108	.	C	CT	.	.	.	GT:DP:AD:GQ	./.:17:17,0:0	1/1:15:1,14:1
1	10109	.	A	T	.	.	.	GT:DP:AD:GQ	0/1:11:8,3:9	0/0:15:15,0:44
1	10147	.	C	CCCCTAA	.	.	.	GT:DP:AD:GQ	0/1:11:8,3:5	0/1:15:4,11:4
1	10206	.	A	AC	.	.	.	GT:DP:AD:GQ	./.:15:15,0:0	0/1:15:4,11:2
1	10212	.	A	AC	.	.	.	GT:DP:AD:GQ	./.:15:15,0:0	0/1:15:4,11:1
1	10218	.	A	AC	.	.	.	GT:DP:AD:GQ	./.:13:13,0:0	0/1:15:4,11:0
1	10230	.	AC	ACCCTAA	.	.	.	GT:DP:AD:GQ	1/0:11:8,3:5	0/1:15:4,11:2
1	10230	.	AC	A	.	.	.	GT:DP:AD:GQ	0/1:11:5,6:5	0/0:15:15,0:2
1	10254	.	T	C	.	.	.	GT:DP:AD:GQ	0/1:11:9,2:5	1/1:15:4,11:2
1	10257	.	A	C	.	.	.	GT:DP:AD:GQ	0/1:11:7,4:4	1/1:15:4,11:2
1	10291	.	C	T	.	.	.	GT:DP:AD:GQ	0/1:11:3,8:7	0/1:15:2,13:6
